apps/whoami/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
  labels:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/part-of: homelab-platform
