apps/whoami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: whoami
  labels:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/part-of: homelab-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: http
              containerPort: 80
          resources: # Resource quotas
            requests:
              memory: "64Mi"
              cpu: "128m"
            limits:
              memory: "128Mi"
              cpu: "256m"
