apps/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
  labels:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/part-of: homelab-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: whoami
  ports:
    - name: http
      port: 80
      targetPort: http
