apps/whoami/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
  labels:
    app.kubernetes.io/name: whoami
    app.kubernetes.io/part-of: homelab-platform
spec:
  ingressClassName: traefik
  rules:
    - host: whoami.tagawa.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
  tls:
    - hosts:
        - whoami.tagawa.ca
